# disease-diagnosis-system

./: .gitignore  Procfile  README.md  build.sh  healthcheck.sh  pyproject.toml  render.yaml  requirements.txt  setup_deployment.sh  wsgi.py
app/: .renderignore  app.py  app_deployment.py  requirements.txt
app/static/: placeholder.txt
app/templates/: index.html
models/: feature_names.pkl  nb_model.pkl  rf_model.pkl  svm_model.pkl
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb
